--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ dependencies {
 
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	//json
+	implementation 'com.googlecode.json-simple:json-simple:1.1'
 }
 
 tasks.named('test') {
