--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 
 	//json
 	implementation 'com.googlecode.json-simple:json-simple:1.1'
+
+	//webClient
+	implementation('org.springframework.boot:spring-boot-starter-webflux')
 }
 
 tasks.named('test') {
