수동 트리거로 변경

--- a/.github/workflows/backend-cicd.yml
+++ b/.github/workflows/backend-cicd.yml
@@ -1,9 +1,8 @@
 name: Backend CI/CD
 
 on:
+  workflow_dispatch:    # 수동 트리거
   push:
-    branches: [ main ]
-  pull_request:
     branches: [ main ]
 
 jobs:
