--- a/.github/workflows/backend-cicd.yml
+++ b/.github/workflows/backend-cicd.yml
@@ -51,7 +51,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           source: '*.jar'
-          target: /opt/fmrs/fmrs-0.0.1-SNAPSHOT.jar
+          target: /opt/fmrs/
 
       - name: Restart fmrs.service on EC2
         uses: appleboy/ssh-action@v0.1.7
