--- a/.github/workflows/backend-cicd.yml
+++ b/.github/workflows/backend-cicd.yml
@@ -1,5 +1,8 @@
 name: Backend CI/CD
 
+env:
+  INITIAL_DATA_INSERT: "${{ secret.INITIAL_DATA_INSERT }}"
+  
 on:
   workflow_dispatch:    # 수동 트리거
   push:
