--- a/build.gradle
+++ b/build.gradle
@@ -51,9 +51,13 @@ dependencies {
 	// 테스트용 db
 	testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
 
-	//jwt
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	// spring security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	//jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 }
 
 tasks.named('test') {
