feat: 쿠키 저장방식 수정
- 엑세스토큰은 Authorization 헤더로 전송, 메모리에 저장

- 리프레시 토큰은 Set_cookie 헤더로 쿠키에 HttpOnly로 저장

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -12,7 +12,6 @@ api-football.host=test_host
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 
 INITIAL_DATA_INSERT=none
-
-init.update_squad_time=0 11 11 */11 * *
+spring.task.scheduling.enabled=false
 
 init.fmplayer_dir_path=test_dir
