--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -12,6 +12,7 @@ api-football.host=test_host
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 
 INITIAL_DATA_INSERT=none
-spring.task.scheduling.enabled=false
+
+init.update_squad_time=0 11 11 */11 * *
 
 init.fmplayer_dir_path=test_dir
