--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+
+    //resilience4j
+    implementation group: 'io.github.resilience4j', name: 'resilience4j-spring-boot3', version: '2.1.0'
 }
 
 tasks.named('test') {
