--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 HELP.md
 .gradle
 build/
+fm_data/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -41,4 +42,3 @@ application.properties
 !/src/querydsl/
 
 src/main/java/com/ksy/fmrs/controller/AdminController.java
-
