--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,9 @@ dependencies {
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+	useJUnitPlatform{
+        excludeTags 'performance'
+    }
 //	finalizedBy jacocoTestReport
 
 }
