test(fmPlayer):fm 관련 변수 추가

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -25,3 +25,7 @@ player.stat.ppl=2d
 init.delete_blacklist_time=0 59 13 * * *
 init.update_league_time=0 17 17 * * *
 init.update_transfer_time=0 15 19 * * *
+
+# FM
+fm.import.batch_size=1000
+fm.version=FM26
