feat: 외부 api 호출 횟수 제한
- ApiFootball 호출부에 호출 횟수 제한 적용

- 호출 횟수 오버 시 429 애러 반환

- 호출 횟수 제한 설정은 환경변수에서 수정

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -12,6 +12,7 @@ spring.jwt.refreshTokenValidityMs=604800000
 
 api-football.key=test_key
 api-football.host=test_host
+api-football.plan=ULTRA
 
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 spring.jpa.hibernate.ddl-auto=create-drop
